# CVRModManager

./: .gitignore  Cargo.toml  LICENSE
src/: api.rs  authors.rs  categories.rs  config.rs  main.rs  mods.json  promotions.rs  sha256_hasher.rs  utils.rs
src/api/: api_error.rs  mod_info.rs  mod_version.rs
